--- a/index.html
+++ b/index.html
@@ -312,6 +312,10 @@
                         ABOUT ME!
                       </h5>
                     </div>
+                    <p class="lead italic">
+                      Head in the clouds :)
+                    </p>
+
                     <p class="lead">
                       Hi! I'm Leslie and I'm a graphic designer.
                     </p>
